# LaREST

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  environment.yaml  minimal.config  pipeline.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docs.yml  lint.yml  test.yml
config/: reference.toml
docs/: conf.py  configuration.md  index.md  installation.md  output.md  pipeline.md  testing.md  usage.md
results/paper/: plotting.py
results/paper/data/: censo_best.inp  crest_best.inp  rdkit_best.inp
results/ring_size/: compile_larest_results.py  pipeline.sh  plot_accuracy.py  plot_thermo.py  plot_vertical.py
results/ring_size/config/: config.toml
results/ring_size/data/: 3_REFINEMENT_H.csv  3_REFINEMENT_S.csv  censo_corrected_S.csv  crest_H.csv  crest_S.csv  experimental.csv  lebedev.csv  rdkit_H.csv  rdkit_S.csv  tropic.csv
results/tropic/: compile_experimental_results.py  compile_larest_results.py  input_experimental.xlsx  pipeline.sh  plot_predicted_vs_actual.py
results/tropic/config/: config.toml
results/tropic/data/: 3_REFINEMENT_H.csv  3_REFINEMENT_S.csv  crest_H.csv  crest_S.csv  experimental.csv  experimental_detailed.csv  rdkit_H.csv  rdkit_S.csv  tropic.csv
results/tu-2023/: computational.csv  experimental.csv  generate_results.py  pipeline.sh  plotting.py
results/tu-2023/config/: config.toml
src/larest/: __init__.py  base.py  censo.py  checkpoint.py  chem.py  cli.py  constants.py  crest.py  data.py  defaults.toml  exceptions.py  main.py  output.py  parsers.py  pipeline.py  rdkit.py  setup.py  xtb.py
tests/: conftest.py  test_censo.py  test_checkpoint.py  test_chem.py  test_crest.py  test_data.py  test_main.py  test_output.py  test_rdkit_stage.py  test_setup.py  test_xtb.py
tests/data/: censo_conformers.xyz  censo_output.txt  crest_entropy_output.txt  rdkit_results.csv  xtb_output.txt  xtb_output_missing.txt
